[package]
name = "abs"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abs-abc049c = { alias = "abc049c", problem = "https://atcoder.jp/contests/abs/tasks/arc065_a" }
abs-abc081a = { alias = "abc081a", problem = "https://atcoder.jp/contests/abs/tasks/abc081_a" }
abs-abc081b = { alias = "abc081b", problem = "https://atcoder.jp/contests/abs/tasks/abc081_b" }
abs-abc083b = { alias = "abc083b", problem = "https://atcoder.jp/contests/abs/tasks/abc083_b" }
abs-abc085b = { alias = "abc085b", problem = "https://atcoder.jp/contests/abs/tasks/abc085_b" }
abs-abc085c = { alias = "abc085c", problem = "https://atcoder.jp/contests/abs/tasks/abc085_c" }
abs-abc086a = { alias = "abc086a", problem = "https://atcoder.jp/contests/abs/tasks/abc086_a" }
abs-abc086c = { alias = "abc086c", problem = "https://atcoder.jp/contests/abs/tasks/arc089_a" }
abs-abc087b = { alias = "abc087b", problem = "https://atcoder.jp/contests/abs/tasks/abc087_b" }
abs-abc088b = { alias = "abc088b", problem = "https://atcoder.jp/contests/abs/tasks/abc088_b" }
abs-practice-a = { alias = "practice-a", problem = "https://atcoder.jp/contests/abs/tasks/practice_1" }

[[bin]]
name = "abs-abc049c"
path = "src/bin/abc049c.rs"

[[bin]]
name = "abs-abc081a"
path = "src/bin/abc081a.rs"

[[bin]]
name = "abs-abc081b"
path = "src/bin/abc081b.rs"

[[bin]]
name = "abs-abc083b"
path = "src/bin/abc083b.rs"

[[bin]]
name = "abs-abc085b"
path = "src/bin/abc085b.rs"

[[bin]]
name = "abs-abc085c"
path = "src/bin/abc085c.rs"

[[bin]]
name = "abs-abc086a"
path = "src/bin/abc086a.rs"

[[bin]]
name = "abs-abc086c"
path = "src/bin/abc086c.rs"

[[bin]]
name = "abs-abc087b"
path = "src/bin/abc087b.rs"

[[bin]]
name = "abs-abc088b"
path = "src/bin/abc088b.rs"

[[bin]]
name = "abs-practice-a"
path = "src/bin/practice-a.rs"

[dependencies]
proconio = "0.3.6"

[dev-dependencies]
