[package]
name = "ahc025"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
ahc025-a = { alias = "a", problem = "https://atcoder.jp/contests/ahc025/tasks/ahc025_a" }

[[bin]]
name = "ahc025-a"
path = "src/bin/a.rs"

[dependencies]
# 202301から:
ac-library-rs = "=0.1.1"
num = "=0.2.1"
# num-bigint = "=0.2.6"
# num-complex = "=0.2.4"
# num-integer = "=0.1.42"
# num-iter = "=0.1.40"
# num-rational = "=0.2.4"
# num-traits = "=0.2.11"
# num-derive = "=0.3.0"
# ndarray = "=0.13.0"
# nalgebra = "=0.20.0"
# alga = "=0.9.3"
# libm = "=0.2.1"
# rand = { version = "=0.7.3", features = ["small_rng"] }
# getrandom = "=0.1.14"
# rand_chacha = "=0.2.2"
# rand_core = "=0.5.1"
# rand_hc = "=0.2.0"
# rand_pcg = "=0.2.1"
# rand_distr = "=0.2.2"
petgraph = "=0.5.0"
# indexmap = "=1.3.2"
# regex = "=1.3.6"
# lazy_static = "=1.4.0"
# ordered-float = "=1.0.2"
# ascii = "=1.0.0"
# permutohedron = "=0.2.4"
# superslice = "=1.0.0"
# maplit = "=1.0.2"
# either = "=1.5.3"
# im-rc = "=14.3.0"
# fixedbitset = "=0.2.0"
# bitset-fixed = "=0.1.0"
# text_io = "=0.1.8"
# whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
# smallvec = "=1.2.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
proconio="0.4.5"

rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
# rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
# itertools = "=0.11.0"
# proconio = { version = "=0.4.5", features = ["derive"] }

svg = "0.13.1"
clap = { version = "4.3.19", features = ["derive"] }
tools = "0.0.0"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.test]
overflow-checks = false

