[package]
name = "arc152"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
arc152-a = { alias = "a", problem = "https://atcoder.jp/contests/arc152/tasks/arc152_a" }
arc152-b = { alias = "b", problem = "https://atcoder.jp/contests/arc152/tasks/arc152_b" }
arc152-c = { alias = "c", problem = "https://atcoder.jp/contests/arc152/tasks/arc152_c" }
arc152-d = { alias = "d", problem = "https://atcoder.jp/contests/arc152/tasks/arc152_d" }
arc152-e = { alias = "e", problem = "https://atcoder.jp/contests/arc152/tasks/arc152_e" }
arc152-f = { alias = "f", problem = "https://atcoder.jp/contests/arc152/tasks/arc152_f" }

[[bin]]
name = "arc152-a"
path = "src/bin/a.rs"

[[bin]]
name = "arc152-b"
path = "src/bin/b.rs"

[[bin]]
name = "arc152-c"
path = "src/bin/c.rs"

[[bin]]
name = "arc152-d"
path = "src/bin/d.rs"

[[bin]]
name = "arc152-e"
path = "src/bin/e.rs"

[[bin]]
name = "arc152-f"
path = "src/bin/f.rs"

[dependencies]
proconio = "0.3.6"

[dev-dependencies]
