[profile.dev]
opt-level = 3

[package]
name = "language-test-202301"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
language-test-202301-abc049c = { alias = "abc049c", problem = "https://atcoder.jp/contests/language-test-202301/tasks/arc065_a" }
language-test-202301-abc081a = { alias = "abc081a", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc081_a" }
language-test-202301-abc081b = { alias = "abc081b", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc081_b" }
language-test-202301-abc083b = { alias = "abc083b", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc083_b" }
language-test-202301-abc085b = { alias = "abc085b", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc085_b" }
language-test-202301-abc085c = { alias = "abc085c", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc085_c" }
language-test-202301-abc086a = { alias = "abc086a", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc086_a" }
language-test-202301-abc086c = { alias = "abc086c", problem = "https://atcoder.jp/contests/language-test-202301/tasks/arc089_a" }
language-test-202301-abc087b = { alias = "abc087b", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc087_b" }
language-test-202301-abc088b = { alias = "abc088b", problem = "https://atcoder.jp/contests/language-test-202301/tasks/abc088_b" }
language-test-202301-l = { alias = "l", problem = "https://atcoder.jp/contests/language-test-202301/tasks/practice_2" }
language-test-202301-m = { alias = "m", problem = "https://atcoder.jp/contests/language-test-202301/tasks/future_contest_2019_final_a" }
language-test-202301-practice-a = { alias = "practice-a", problem = "https://atcoder.jp/contests/language-test-202301/tasks/practice_1" }

[[bin]]
name = "language-test-202301-abc049c"
path = "src/bin/abc049c.rs"

[[bin]]
name = "language-test-202301-abc081a"
path = "src/bin/abc081a.rs"

[[bin]]
name = "language-test-202301-abc081b"
path = "src/bin/abc081b.rs"

[[bin]]
name = "language-test-202301-abc083b"
path = "src/bin/abc083b.rs"

[[bin]]
name = "language-test-202301-abc085b"
path = "src/bin/abc085b.rs"

[[bin]]
name = "language-test-202301-abc085c"
path = "src/bin/abc085c.rs"

[[bin]]
name = "language-test-202301-abc086a"
path = "src/bin/abc086a.rs"

[[bin]]
name = "language-test-202301-abc086c"
path = "src/bin/abc086c.rs"

[[bin]]
name = "language-test-202301-abc087b"
path = "src/bin/abc087b.rs"

[[bin]]
name = "language-test-202301-abc088b"
path = "src/bin/abc088b.rs"

[[bin]]
name = "language-test-202301-l"
path = "src/bin/l.rs"

[[bin]]
name = "language-test-202301-m"
path = "src/bin/m.rs"

[[bin]]
name = "language-test-202301-practice-a"
path = "src/bin/practice-a.rs"

[dependencies]
# 202301から:
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=3.14.2", features = ["c_raw", "rand", "stringly_conversions"] }
amplify_derive = "=2.11.3"
amplify_num = { version = "=0.4.1", features = ["std"] }
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"

# 202004から続投:
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.5", features = ["derive"] }
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = { version = "=1.11.0", features = ["const_generics", "const_new", "write", "union", "serde", "arbitrary"] }

[dev-dependencies]
